--- a/ProxyContract/config.yml
+++ b/ProxyContract/config.yml
@@ -1,6 +1,6 @@
 --- 
 name: The Whys and Hows of the Proxy Contract
-summary: This tutorial gives a short introduction of the web3.js library, querying the block number
+summary: Learn this pattern to save gas & make upgradable contracts
 level: 4
 tags: 
   - Remix
